# python-strike

./: .gitignore  README.md  calibration_tool.py  controls.py  environment.py  game.py  main.py  player.py  pyproject.toml
assets/maps/: scene.bam
assets/maps/textures/: part4_baseColor.jpeg:Zone.Identifier
assets/maps/training_military/: scene.gltf
assets/monsters/fat/: fat.gltf
assets/skybox/: skybox.bam  skybox.gltf
assets/sounds/: main_menu.wav:Zone.Identifier
assets/weapons/knife/: knife.bam  knife.gltf
domain/: environment.py  monster.py  player.py  weapon.py
interfaces/: controls_adapter.py  menu_interface.py
use_cases/: move_player.py
